Add momentum and adadelta training.
The hyperparameters for those two could use some love though.

--- a/theano_mlp/theano_mlp.ipynb
+++ b/theano_mlp/theano_mlp.ipynb
@@ -429,16 +429,16 @@
     "import timeit\n",
     "\n",
     "## early-stopping parameters tuned for 1-2 min runtime\n",
-    "def do_training(train_model, test_model, train_set, valid_set, test_set,\n",
-    "                # maximum number of epochs\n",
-    "                n_epochs=20,\n",
-    "                # look at this many examples regardless\n",
-    "                patience=5000,\n",
-    "                # wait this much longer when a new best is found\n",
-    "                patience_increase=2,\n",
-    "                # a relative improvement of this much is considered significant\n",
-    "                improvement_threshold=0.995,\n",
-    "                batch_size=20):\n",
+    "def sgd_training(train_model, test_model, train_set, valid_set, test_set,\n",
+    "                 # maximum number of epochs\n",
+    "                 n_epochs=20,\n",
+    "                 # look at this many examples regardless\n",
+    "                 patience=5000,\n",
+    "                 # wait this much longer when a new best is found\n",
+    "                 patience_increase=2,\n",
+    "                 # a relative improvement of this much is considered significant\n",
+    "                 improvement_threshold=0.995,\n",
+    "                 batch_size=20):\n",
     "\n",
     "    n_train_batches = train_set.num_examples // batch_size\n",
     "\n",
@@ -464,7 +464,7 @@
     "        epoch = epoch + 1\n",
     "        minibatch_index = 0\n",
     "        for minibatch_x, minibatch_y in train_stream.get_epoch_iterator():\n",
-    "            minibatch_avg_cost = train_model(minibatch_x, minibatch_y)\n",
+    "            train_model(minibatch_x, minibatch_y)\n",
     "\n",
     "            # iteration number\n",
     "            iter = (epoch - 1) * n_train_batches + minibatch_index\n",
@@ -602,7 +602,7 @@
    },
    "outputs": [],
    "source": [
-    "do_training(train_model, test_model, train_set, valid_set, test_set)"
+    "sgd_training(train_model, test_model, train_set, valid_set, test_set)"
    ]
   },
   {
@@ -611,7 +611,6 @@
    "source": [
     "## How can we make it better?\n",
     "\n",
-    "- Additional learning rules (RMSProp, ADAM, ...)\n",
     "- Max-column normalization\n",
     "- Dropout\n"
    ]
@@ -620,9 +619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ReLU activation\n",
-    "\n",
-    "If you want to try the network with ReLU activations you can use the code below"
+    "### ReLU activation"
    ]
   },
   {
@@ -663,7 +660,104 @@
    },
    "outputs": [],
    "source": [
-    "do_training(train_relu, test_relu, train_set, valid_set, test_set)"
+    "sgd_training(train_relu, test_relu, train_set, valid_set, test_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Momentum training (Adadelta, RMSProp, ...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rng = numpy.random.RandomState(1234)\n",
+    "x = tensor.matrix('x')\n",
+    "# The labels coming from Fuel are in a \"column\" format\n",
+    "y = tensor.icol('y')\n",
+    "\n",
+    "n_in = 28 * 28\n",
+    "n_out = 10\n",
+    "\n",
+    "mlp_model = MLP(\n",
+    "    rng=rng,\n",
+    "    input=x,\n",
+    "    target=y,\n",
+    "    n_in=n_in,\n",
+    "    n_hidden=[500],\n",
+    "    n_out=n_out,\n",
+    "    activation=tensor.tanh)\n",
+    "\n",
+    "lr = numpy.float32(0.1)\n",
+    "L1_reg = numpy.float32(0)\n",
+    "L2_reg = numpy.float32(0.0001)\n",
+    "rho = numpy.float32(0.95)\n",
+    "\n",
+    "# This implements simple momentum\n",
+    "def get_momentum_updates(params_and_grads, lr, rho):\n",
+    "    res = []\n",
+    "\n",
+    "    # numpy will promote (1 - rho) to float64 otherwise\n",
+    "    one = numpy.float32(1.)\n",
+    "    \n",
+    "    for p, g in params_and_grads:\n",
+    "        up = theano.shared(p.get_value() * 0)\n",
+    "        res.append((p, p - lr * up))\n",
+    "        res.append((up, rho * up + (one - rho) * g))\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "# This implements the parameter updates for Adadelta\n",
+    "def get_ada_updates(params_and_grads, lr, rho):\n",
+    "    up2 = [theano.shared(p.get_value() * 0, name=\"up2 for \" + p.name) for p, g in params_and_grads]\n",
+    "    grads2 = [theano.shared(p.get_value() * 0, name=\"grads2 for \" + p.name) for p, g in params_and_grads]\n",
+    "\n",
+    "    # This is dumb but numpy will promote (1 - rho) to float64 otherwise\n",
+    "    one = numpy.float32(1.)\n",
+    "    \n",
+    "    rg2up = [(rg2, rho * rg2 + (one - rho) * (g ** 2))\n",
+    "             for rg2, (p, g) in zip(grads2, params_and_grads)]\n",
+    "\n",
+    "    updir = [-(tensor.sqrt(ru2 + 1e-6) / tensor.sqrt(rg2 + 1e-6)) * g\n",
+    "             for (p, g), ru2, rg2 in zip(params_and_grads, up2, grads2)]\n",
+    "\n",
+    "    ru2up = [(ru2, rho * ru2 + (one - rho) * (ud ** 2))\n",
+    "             for ru2, ud in zip(up2, updir)]\n",
+    "\n",
+    "    param_up = [(p, p + ud) for (p, g), ud in zip(params_and_grads, updir)]\n",
+    "    \n",
+    "    return rg2up + ru2up + param_up\n",
+    "\n",
+    "# You can try to write an RMSProp function and train the model with it.\n",
+    "\n",
+    "def get_momentum_training_fn(mlp_model, updates_fn, L1_reg, L2_reg, lr, rho):\n",
+    "    inputs = [mlp_model.input, mlp_model.target]\n",
+    "    params_and_grads = regularized_cost_grad(mlp_model, L1_reg, L2_reg)\n",
+    "    updates = updates_fn(params_and_grads, lr=lr, rho=rho)\n",
+    "    return theano.function(inputs, updates=updates)\n",
+    "\n",
+    "momentum_train = get_momentum_training_fn(mlp_model, get_ada_updates, L1_reg, L2_reg,\n",
+    "                                          lr=lr, rho=rho)\n",
+    "momentum_test = get_test_fn(mlp_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sgd_training(momentum_train, momentum_test, train_set, valid_set, test_set, n_epochs=20)"
    ]
   },
   {
