--- a/debug/slides_source/debug.tex
+++ b/debug/slides_source/debug.tex
@@ -39,7 +39,7 @@ Université de Montréal}
   \url{http://github.com/mila-udem/summerschool2015/debug}
 \end{frame}
 
-\section{Introduction}
+\section{Debugging}
 \begin{frame}
   \tableofcontents[currentsection]
 \end{frame}
@@ -47,9 +47,16 @@ Université de Montréal}
 \subsection{Debugging}
 \begin{frame}{Debugging}
   \begin{itemize}
-  \item DEBUG\_MODE
   \item Error message
+  \item DEBUG\_MODE
   \item theano.printing.debugprint
+breakpoint op
+nanguard
+printop
+test_value
+name AssertOp
+profile=True? exception_verbosity for missing memory.
+%%on_opt_err, optimizer_verbose=True
   \end{itemize}
 \end{frame}
 
