--- a/debug/slides_source/debug.tex
+++ b/debug/slides_source/debug.tex
@@ -179,9 +179,63 @@ Already show on the first presentation.
 \end{frame}
 
 \subsection{Breakpoint}
-\begin{frame}
-  \frametitle{Breakpoint Op}
+\begin{frame}[fragile]
+  \frametitle{Breakpoint Op} Identity-like op with the side effect of
+  enforcing a conditional breakpoint, inside a theano function, based
+  on a symbolic scalar condition.
+\end{frame}
 
+\begin{frame}[fragile]
+  \frametitle{Breakpoint Op: optimization}
+  Theano optimization don't know it.
+\begin{itemize}
+  \item Could Slow down computation
+  \item Could disable stability optimization
+\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Breakpoint Op: example}
+\lstset{language=Python,
+        commentstyle=\itshape\color{blue},
+        stringstyle=\color{violet},
+        basicstyle=\footnotesize,
+        xleftmargin=-1em
+        }
+\begin{lstlisting}
+import theano
+import theano.tensor as T
+from theano.tests.breakpoint import PdbBreakpoint
+input, target = T.fvectors('xy')
+
+mse = (input - target) ** 2
+
+# Conditional breakpoint to be activated if the total MSE is higher
+# than 100. The breakpoint will monitor the inputs, targets as well
+# as the individual error values
+breakpointOp = PdbBreakpoint(``MSE too high'')
+condition = T.gt(mse.sum(), 100)
+mse, monitored_input, monitored_target = breakpointOp(
+    condition, mse, input, target)
+\end{lstlisting}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Breakpoint Op: example}
+\lstset{language=Python,
+        commentstyle=\itshape\color{blue},
+        stringstyle=\color{violet},
+        basicstyle=\footnotesize,
+        xleftmargin=-1em
+        }
+\begin{lstlisting}
+# Compile the theano function
+fct = theano.function([input, target], mse)
+
+# Use the function
+print fct([10, 0], [10, 5]) # Will NOT activate the breakpoint
+print fct([0, 0], [10, 5]) # Will activate the breakpoint
+\end{lstlisting}
 
 \end{frame}
 
