Overhaul the 'quick start' section

--- a/fuel_tutorial/fuel_tutorial.ipynb
+++ b/fuel_tutorial/fuel_tutorial.ipynb
@@ -26,9 +26,9 @@
     "\n",
     "*Simplify downloading, storing, iterating over and preprocessing data used to train machine learning models.*\n",
     "\n",
-    "## Quick start\n",
+    "# Quick start\n",
     "\n",
-    "We'll go over a quick example to see how we can load arbitrary data into a dataset and and set up a basic preprocessing pipeline to iterate over the data while transforming it on the fly.\n",
+    "We'll go over a quick example to see what Fuel is capable of.\n",
     "\n",
     "Let's start by creating some random data to act as features and targets. We'll pretend that we have eight 2x2 grayscale images separated into four classes."
    ]
@@ -37,7 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -52,7 +52,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first thing we need to do is to store this data in a dataset."
+    "Our goal is to use Fuel to interface with this data, iterate over it in various ways and apply transformations to it on the fly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Division of labor\n",
+    "\n",
+    "There are four basic tasks that Fuel needs to handle:\n",
+    "\n",
+    "* Interface with the data, be it on disk or in memory.\n",
+    "* Decide which data points to visit, and in which order.\n",
+    "* Iterate over the selected data points.\n",
+    "* At each iteration step, apply some transformation to the selected data points.\n",
+    "\n",
+    "Each of those four tasks is delegated to a particular class of objects, which we'll be introducing in order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datasets: interfacing with data\n",
+    "\n",
+    "The `Dataset` class is responsible for interfacing with the data and handling data access requests. Subclasses of `Dataset` specialize in certain types of data."
    ]
   },
   {
@@ -66,9 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are many dataset classes to choose from. We'll look at the simplest one, `IterableDataset`.\n",
+    "The simplest ``Dataset`` subclass is `IterableDataset`, which interfaces with iterable objects.\n",
     "\n",
-    "It is created by passing a `dict` mapping source names to the data they contain and, optionally, a `dict` mapping source names to tuples of axis labels."
+    "It is created by passing a `dict` mapping source names to their associated data and, optionally, a `dict` mapping source names to tuples of axis labels."
    ]
   },
   {
@@ -147,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the return order depends on the order of `dataset.sources`, which is nondeterministic if you use `dict` instances. In order to have deterministic behaviour, it is recommended that you use `OrderedDict` instances instead.\n",
+    "*(Note that the return order depends on the order of `dataset.sources`, which is nondeterministic if you use `dict` instances. In order to have deterministic behaviour, it is recommended that you use `OrderedDict` instances instead.)*\n",
     "\n",
     "Eventually, the iterator is depleted and it raises a `StopIteration` exception. We can iterate over the dataset again by requesting a fresh iterator through the dataset's `reset` method."
    ]
@@ -160,7 +185,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "while True:\n",
     "    try:\n",
     "        dataset.get_data(state=state)\n",
@@ -182,7 +206,7 @@
     "\n",
     "If your data happens to be indexable (e.g. a list, or a numpy array), then `IndexableDataset` will let you do much more.\n",
     "\n",
-    "We instantiate `IndexableDataset` just like we would for `IterableDataset`."
+    "We instantiate `IndexableDataset` just like `IterableDataset`."
    ]
   },
   {
@@ -226,9 +250,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See how `IndexableDataset` returns a `None` state: this is because there's no actual state to maintain in this case.\n",
-    "\n",
-    "### Iteration schemes\n",
+    "*(See how `IndexableDataset` returns a `None` state: this is because there's no actual state to maintain in this case.)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iteration schemes: which examples to visit\n",
     "\n",
     "Encapsulating and accessing our data is good, but if we're to integrate it into a training loop, we need to be able to iterate over the data. For that, we need to decide *which* indices to request and in *which order*. This is accomplished via an `IterationScheme` subclass.\n",
     "\n",
@@ -281,11 +310,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data streams\n",
+    "## Data streams: automating the iteration process\n",
     "\n",
-    "Iteration schemes offer a more convenient way to visit the dataset than accessing the data by hand, but we can do better: the act of getting a fresh state from the dataset, getting a request iterator from the iteration scheme, using both to access the data and closing the state is repetitive. To automate this, we have data streams.\n",
+    "Iteration schemes offer a more convenient way to visit the dataset than accessing the data by hand, but we can do better: the act of getting a fresh state from the dataset, getting a request iterator from the iteration scheme, using both to access the data and closing the state is repetitive. To automate this, we have *data streams*, which are subclasses of ``AbstractDataStream``.\n",
     "\n",
-    "The most common data stream class is `DataStream`. It is instantiated with a dataset and an iteration scheme, and returns an epoch iterator through its `get_epoch_iterator` method, which iterates over the dataset in the order defined by the iteration scheme."
+    "The most common ``AbstractDataStream`` subclass is `DataStream`. It is instantiated with a dataset and an iteration scheme, and returns an epoch iterator through its `get_epoch_iterator` method, which iterates over the dataset in the order defined by the iteration scheme."
    ]
   },
   {
@@ -307,11 +336,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transformers\n",
+    "## Transformers: apply some transformation on the fly\n",
     "\n",
     "Some data streams take data streams as input. We call them *transformers*, and they enable us to build complex data preprocessing pipelines.\n",
     "\n",
-    "Let's standardize the images we have by substracting their mean and dividing by their standard deviation."
+    "Transformers are ``Transformer`` subclasses. Most of the the transformers you'll encounter are located in the ``fuel.transformers`` module. Here are some commonly used ones:\n",
+    "\n",
+    "* ``Flatten``: flattens the input into a matrix (for batch input) or a vector (for examplewise input).\n",
+    "* ``ScaleAndShift``: scales and shifts the input by scalar quantities.\n",
+    "* ``Cast``: casts the input into some data type.\n",
+    "\n",
+    "As an example, let's standardize the images we have by substracting their mean and dividing by their standard deviation."
    ]
   },
   {
