--- a/convnets/lenet.ipynb
+++ b/convnets/lenet.ipynb
@@ -319,12 +319,12 @@
    "source": [
     "from fuel.datasets import MNIST\n",
     "\n",
-    "train = MNIST(which_sets=('train',), subset=slice(0, 2000))\n",
-    "valid = MNIST(which_sets=('train',), subset=slice(2000, 2500))\n",
-    "test = MNIST(which_sets=('test',), subset=slice(0, 1000))\n",
+    "train = MNIST(which_sets=('train',))\n",
+    "valid = MNIST(which_sets=('train',)))\n",
+    "test = MNIST(which_sets=('test',)))\n",
     "\n",
     "params, layer0_out, layer1_out = evaluate_lenet5(train, test, valid,\n",
-    "                                                 learning_rate=0.1, n_epochs=20,\n",
+    "                                                 learning_rate=0.1, n_epochs=10,\n",
     "                                                 nkerns=[10, 25], batch_size=50)"
    ]
   },
