Update tutorial presenters

--- a/intro_theano/slides_source/intro_theano.tex
+++ b/intro_theano/slides_source/intro_theano.tex
@@ -147,15 +147,16 @@ August 4th, Deep Learning Summer School 2015, Montréal
     \uncover<5->{
       \begin{columns}
         \begin{column}{.07\textwidth}
-          \includegraphics[width=\columnwidth]{philemon_brakel.jpg}
+          \includegraphics[width=\columnwidth]{carriepl.jpg}
         \end{column}
         \begin{column}{.07\textwidth}
+          \includegraphics[width=\columnwidth]{philemon_brakel.jpg}
         \end{column}
         \begin{column}{.8\textwidth}
           \scriptsize
           Tuesday, August 11th (day 9)
           \begin{itemize}
-            \item Scan: Loops in Theano
+            \item Scan: Loops in Theano (Pierre Luc Carrier)
             \item Recurrent neural networks (Philémon Brakel)
           \end{itemize}
           \vspace{2mm}
@@ -758,7 +759,7 @@ floatX = float32
     \item Gradient through \verb|scan| implements backprop through time
     \item Can be transfered to GPU
   \end{itemize}
-  For more, come and see Philémon's presentation next Tuesday (Aug. 11th, day 9)
+  For more, come and see Pierre Luc's presentation next Tuesday (Aug. 11th, day 9)
 \end{frame}
 
 
