--- a/theano_mlp/theano_mlp.ipynb
+++ b/theano_mlp/theano_mlp.ipynb
@@ -427,9 +427,12 @@
    "outputs": [],
    "source": [
     "import timeit\n",
+    "from fuel.streams import DataStream\n",
+    "from fuel.schemes import SequentialScheme\n",
+    "from fuel.transformers import Flatten\n",
     "\n",
     "## early-stopping parameters tuned for 1-2 min runtime\n",
-    "def sgd_training(train_model, test_model, train_set, valid_set, test_set,\n",
+    "def sgd_training(train_model, test_model, train_set, valid_set, test_set, model_name='mlp_model',\n",
     "                 # maximum number of epochs\n",
     "                 n_epochs=20,\n",
     "                 # look at this many examples regardless\n",
@@ -503,7 +506,7 @@
     "                    # save the best parameters\n",
     "                    # build a name -> value dictionary\n",
     "                    best = {param.name: param.get_value() for param in mlp_model.params}\n",
-    "                    numpy.savez('best_mlp_model.npz', **best)\n",
+    "                    numpy.savez('best_{}.npz'.format(model_name), **best)\n",
     "\n",
     "            minibatch_index += 1\n",
     "            if patience <= iter:\n",
@@ -535,15 +538,12 @@
    "outputs": [],
    "source": [
     "from fuel.datasets import MNIST\n",
-    "from fuel.streams import DataStream\n",
-    "from fuel.schemes import SequentialScheme\n",
-    "from fuel.transformers import Flatten\n",
     "\n",
     "# the full set is usually (0, 50000) for train, (50000, 60000) for valid and no slice for test.\n",
     "# We only selected a subset to go faster.\n",
     "train_set = MNIST(which_sets=('train',), sources=('features', 'targets'), subset=slice(0, 20000))\n",
     "valid_set = MNIST(which_sets=('train',), sources=('features', 'targets'), subset=slice(20000, 24000))\n",
-    "test_set = MNIST(which_sets=('test',), sources=('features', 'targets'), subset=slice(0, 10000))\n"
+    "test_set = MNIST(which_sets=('test',), sources=('features', 'targets'))"
    ]
   },
   {
@@ -660,7 +660,7 @@
    },
    "outputs": [],
    "source": [
-    "sgd_training(train_relu, test_relu, train_set, valid_set, test_set)"
+    "sgd_training(train_relu, test_relu, train_set, valid_set, test_set, model_name='mlp_relu')"
    ]
   },
   {
@@ -668,6 +668,59 @@
    "metadata": {},
    "source": [
     "### Momentum training (Adadelta, RMSProp, ...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# This implements simple momentum\n",
+    "def get_momentum_updates(params_and_grads, lr, rho):\n",
+    "    res = []\n",
+    "\n",
+    "    # numpy will promote (1 - rho) to float64 otherwise\n",
+    "    one = numpy.float32(1.)\n",
+    "    \n",
+    "    for p, g in params_and_grads:\n",
+    "        up = theano.shared(p.get_value() * 0)\n",
+    "        res.append((p, p - lr * up))\n",
+    "        res.append((up, rho * up + (one - rho) * g))\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "# This implements the parameter updates for Adadelta\n",
+    "def get_adadelta_updates(params_and_grads, rho):\n",
+    "    up2 = [theano.shared(p.get_value() * 0, name=\"up2 for \" + p.name) for p, g in params_and_grads]\n",
+    "    grads2 = [theano.shared(p.get_value() * 0, name=\"grads2 for \" + p.name) for p, g in params_and_grads]\n",
+    "\n",
+    "    # This is dumb but numpy will promote (1 - rho) to float64 otherwise\n",
+    "    one = numpy.float32(1.)\n",
+    "    \n",
+    "    rg2up = [(rg2, rho * rg2 + (one - rho) * (g ** 2))\n",
+    "             for rg2, (p, g) in zip(grads2, params_and_grads)]\n",
+    "\n",
+    "    updir = [-(tensor.sqrt(ru2 + 1e-6) / tensor.sqrt(rg2 + 1e-6)) * g\n",
+    "             for (p, g), ru2, rg2 in zip(params_and_grads, up2, grads2)]\n",
+    "\n",
+    "    ru2up = [(ru2, rho * ru2 + (one - rho) * (ud ** 2))\n",
+    "             for ru2, ud in zip(up2, updir)]\n",
+    "\n",
+    "    param_up = [(p, p + ud) for (p, g), ud in zip(params_and_grads, updir)]\n",
+    "    \n",
+    "    return rg2up + ru2up + param_up\n",
+    "\n",
+    "# You can try to write an RMSProp function and train the model with it.\n",
+    "\n",
+    "def get_momentum_training_fn(mlp_model, L1_reg, L2_reg, lr, rho):\n",
+    "    inputs = [mlp_model.input, mlp_model.target]\n",
+    "    params_and_grads = regularized_cost_grad(mlp_model, L1_reg, L2_reg)\n",
+    "    updates = get_momentum_updates(params_and_grads, lr=lr, rho=rho)\n",
+    "    return theano.function(inputs, updates=updates)"
    ]
   },
   {
@@ -700,74 +753,11 @@
     "L2_reg = numpy.float32(0.0001)\n",
     "rho = numpy.float32(0.95)\n",
     "\n",
-    "# This implements simple momentum\n",
-    "def get_momentum_updates(params_and_grads, lr, rho):\n",
-    "    res = []\n",
+    "momentum_train = get_momentum_training_fn(mlp_model, L1_reg, L2_reg, lr=lr, rho=rho)\n",
+    "test_fn = get_test_fn(mlp_model)\n",
     "\n",
-    "    # numpy will promote (1 - rho) to float64 otherwise\n",
-    "    one = numpy.float32(1.)\n",
-    "    \n",
-    "    for p, g in params_and_grads:\n",
-    "        up = theano.shared(p.get_value() * 0)\n",
-    "        res.append((p, p - lr * up))\n",
-    "        res.append((up, rho * up + (one - rho) * g))\n",
-    "\n",
-    "    return res\n",
-    "\n",
-    "\n",
-    "# This implements the parameter updates for Adadelta\n",
-    "def get_ada_updates(params_and_grads, lr, rho):\n",
-    "    up2 = [theano.shared(p.get_value() * 0, name=\"up2 for \" + p.name) for p, g in params_and_grads]\n",
-    "    grads2 = [theano.shared(p.get_value() * 0, name=\"grads2 for \" + p.name) for p, g in params_and_grads]\n",
-    "\n",
-    "    # This is dumb but numpy will promote (1 - rho) to float64 otherwise\n",
-    "    one = numpy.float32(1.)\n",
-    "    \n",
-    "    rg2up = [(rg2, rho * rg2 + (one - rho) * (g ** 2))\n",
-    "             for rg2, (p, g) in zip(grads2, params_and_grads)]\n",
-    "\n",
-    "    updir = [-(tensor.sqrt(ru2 + 1e-6) / tensor.sqrt(rg2 + 1e-6)) * g\n",
-    "             for (p, g), ru2, rg2 in zip(params_and_grads, up2, grads2)]\n",
-    "\n",
-    "    ru2up = [(ru2, rho * ru2 + (one - rho) * (ud ** 2))\n",
-    "             for ru2, ud in zip(up2, updir)]\n",
-    "\n",
-    "    param_up = [(p, p + ud) for (p, g), ud in zip(params_and_grads, updir)]\n",
-    "    \n",
-    "    return rg2up + ru2up + param_up\n",
-    "\n",
-    "# You can try to write an RMSProp function and train the model with it.\n",
-    "\n",
-    "def get_momentum_training_fn(mlp_model, updates_fn, L1_reg, L2_reg, lr, rho):\n",
-    "    inputs = [mlp_model.input, mlp_model.target]\n",
-    "    params_and_grads = regularized_cost_grad(mlp_model, L1_reg, L2_reg)\n",
-    "    updates = updates_fn(params_and_grads, lr=lr, rho=rho)\n",
-    "    return theano.function(inputs, updates=updates)\n",
-    "\n",
-    "momentum_train = get_momentum_training_fn(mlp_model, get_ada_updates, L1_reg, L2_reg,\n",
-    "                                          lr=lr, rho=rho)\n",
-    "momentum_test = get_test_fn(mlp_model)"
+    "sgd_training(momentum_train, test_fn, train_set, valid_set, test_set, n_epochs=20, model_name='mlp_momentum')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "sgd_training(momentum_train, momentum_test, train_set, valid_set, test_set, n_epochs=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
